# agentops

./: pyproject.toml  test.index  test.info
agentops/: __init__.py  client.py  event.py  helpers.py  http_client.py  llm_tracker.py  logger.py  telemetry.py  worker.py
agentops/partners/: autogen_logger.py
docs/v1/integrations/: cohere.mdx
examples/multion/: retrieve.ipynb
tests/: mock_agent.py
tests/openai_handlers/: _test_llm_tracker_ge_1_sync.py
