[build-system]
requires = ["setuptools>=61.0", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentops"
version = "0.1.1"
authors = [
  "Alex Reibman <areibman@gmail.com>",
  "Shawn Qiu <siyangqiu@gmail.com>",
  "Braelyn Boynton <bboynton97@gmail.com>",
  "Howard Gil <howardbgil@gmail.com>"
]
description = "Python SDK for developing AI agent evals and observability"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.31.0"
psutil = "5.9.8"


[tool.poetry.dev-dependencies]
pytest = "7.4.0"
requests_mock = "1.11.0"

[tool.poetry.extras]
langchain = ['langchain>=0.0.354']

[project.urls]
Homepage = "https://github.com/AgentOps-AI/agentops"
Issues = "https://github.com/AgentOps-AI/agentops/issues"
